# core

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  README.md  README.ru.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
core/: settings.py  urls.py
demonlist/: admin.py  api_client.py  api_views.py  apps.py  models.py  selectors.py  serializers.py  services.py  signals.py  tests.py  tests_admin.py  tests_api.py  tests_rank_search.py  tests_validation.py  urls.py  utils.py  variable.py  views.py
demonlist/management/commands/: add_victors_all_users.py  add_victors_user.py  all_players_dvsleerstvo  import-levels.py  record_history.py  update-level-points.py  update-score.py
demonlist/migrations/: 0001_initial.py
discordbot/: Dockerfile  main.py  pyproject.toml
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js
frontend/src/: app.html
frontend/src/lib/: api.ts  stores.ts
frontend/src/lib/components/: Spinner.svelte
frontend/src/routes/: +layout.svelte  +page.ts
frontend/static/css/: flag.css  level_detail.css  media.css  search.css  statistic.css  submit_record.css  video.css
frontend/static/data/: regions_sample.geojson
frontend/tests/: demonlist.spec.ts
nginx/: nginx.conf
static/: script.js
static/css/: base.css  button.css  flag.css  leaderboard.css  level.css  region_profile.css  table.css  user_profile.css
templates/admin/: level_changelist.html  user_changelist.html  victor_changelist.html
(+16 files in other folders)
